doc/css/mc_rtc.css
/* Highlighting CSS for code framents, using default theme from https://jwarby.github.io/jekyll-pygments-themes/ */
.highlight .hll { background-color: #ffffcc }
.highlight .c { color: #408080; font-style: italic } /* Comment */
.highlight .err { border: 1px solid #FF0000 } /* Error */
.highlight .k { color: #008000; font-weight: bold } /* Keyword */
.highlight .o { color: #666666 } /* Operator */
.highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #BC7A00 } /* Comment.Preproc */
.highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */
.highlight .cs { color: #408080; font-style: italic } /* Comment.Special */
.highlight .gd { color: #A00000 } /* Generic.Deleted */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #FF0000 } /* Generic.Error */
.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
.highlight .gi { color: #00A000 } /* Generic.Inserted */
.highlight .go { color: #808080 } /* Generic.Output */
.highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
.highlight .gt { color: #0040D0 } /* Generic.Traceback */
.highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
.highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
.highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
.highlight .kp { color: #008000 } /* Keyword.Pseudo */
.highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #B00040 } /* Keyword.Type */
.highlight .m { color: #666666 } /* Literal.Number */
.highlight .s { color: #BA2121 } /* Literal.String */
.highlight .na { color: #7D9029 } /* Name.Attribute */
.highlight .nb { color: #008000 } /* Name.Builtin */
.highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */
.highlight .no { color: #880000 } /* Name.Constant */
.highlight .nd { color: #AA22FF } /* Name.Decorator */
.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
.highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #0000FF } /* Name.Function */
.highlight .nl { color: #A0A000 } /* Name.Label */
.highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
.highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */
.highlight .nv { color: #19177C } /* Name.Variable */
.highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #666666 } /* Literal.Number.Float */
.highlight .mh { color: #666666 } /* Literal.Number.Hex */
.highlight .mi { color: #666666 } /* Literal.Number.Integer */
.highlight .mo { color: #666666 } /* Literal.Number.Oct */
.highlight .sb { color: #BA2121 } /* Literal.String.Backtick */
.highlight .sc { color: #BA2121 } /* Literal.String.Char */
.highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
.highlight .s2 { color: #BA2121 } /* Literal.String.Double */
.highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
.highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */
.highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
.highlight .sx { color: #008000 } /* Literal.String.Other */
.highlight .sr { color: #BB6688 } /* Literal.String.Regex */
.highlight .s1 { color: #BA2121 } /* Literal.String.Single */
.highlight .ss { color: #19177C } /* Literal.String.Symbol */
.highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #19177C } /* Name.Variable.Class */
.highlight .vg { color: #19177C } /* Name.Variable.Global */
.highlight .vi { color: #19177C } /* Name.Variable.Instance */
.highlight .il { color: #666666 } /* Literal.Number.Integer.Long */

body
{
  background: #f8f9fa;
}

.showcase
{
  background: #777777;
  padding-top: 25px;
  margin-bottom: 25px;
}

.showcase h2
{
  color: white;
  text-align: center;
}

.carousel-caption {
  padding-top: 40px;
  position: relative;
  left: auto;
  right: auto;
}

.features
{
  margin-top: 20px;
}

.features h5
{
  font-weight: bold;
}

.list-group.list-group-root {
    padding: 0;
    overflow: hidden;
}

.list-group.list-group-root .list-group {
    margin-bottom: 0;
}

.list-group.list-group-root .list-group-item {
    border-radius: 0;
    border-width: 1px 0 0 0;
}

.list-group.list-group-root > .list-group-item:first-child {
    border-top-width: 0;
}

.list-group.list-group-root > .collapse > .list-group > .list-group-item {
    padding-left: 30px;
}

.list-group.list-group-root > .collapsing > .list-group > .list-group-item {
    padding-left: 30px;
}

.list-group.list-group-root > .collapse.show > .list-group > .list-group-item {
    padding-left: 30px;
}

.list-group-item .octicon {
    margin-right: 5px;
}

.card-schema
{
  margin-bottom: 10px;
}

.card .card-schema table
{
  table-layout:fixed;
}

.object-property
{
  margin-bottom: 10px;
}

.object-property td
{
  padding-bottom: 6px;
  padding-top: 6px;
}

.text-enum
{
  color: purple;
}

.text-string
{
  color: green;
}

.text-boolean
{
  color: orangered;
}

.text-number
{
  color: blue;
}

.text-integer
{
  color: blueviolet;
}

.card-schema > .card-header
{
  padding-left: 10px;
  padding-right: 10px;
}

.card-schema > .card-body
{
  padding-bottom: 5px;
}

.object-property-description
{
  float: right;
}

.offscreen
{
  position: absolute;
  left: -999em;
}

.copy-button
{
  margin-top: 10px;
}

.card-source
{
  margin-bottom: 20px;
}

.card-source pre
{
  margin-bottom: 0;
}

.card-source figure
{
  margin-bottom: 0;
}

.sticky-toc
{
  top: 58px;
}

#tutorial-content h1
{
  padding-top: 58px;
  margin-top: -58px;
}
#tutorial-content h2
{
  padding-top: 58px;
  margin-top: -58px;
}
#tutorial-content h3
{
  padding-top: 58px;
  margin-top: -58px;
}
#tutorial-content h4
{
  padding-top: 58px;
  margin-top: -58px;
}
#tutorial-content h5
{
  padding-top: 58px;
  margin-top: -58px;
}
#tutorial-content h6
{
  padding-top: 58px;
  margin-top: -58px;
}

